--- a/Segmentation-Experiments/config/rescuenet-pspnet101.yaml
+++ b/Segmentation-Experiments/config/rescuenet-pspnet101.yaml
@@ -10,8 +10,8 @@ TRAIN:
   use_pretrained_weights: True # to indicate whether the model will use pre-trained weights or not
   dataset: rescuenet # @sh : new param
   sync_bn: True  # adopt syncbn or not
-  train_h: 713 #1024 
-  train_w: 713 #1024 #713
+  train_h: 257 #1024
+  train_w: 257 #1024 #713
   scale_min: 0.5  # minimum random scale
   scale_max: 2.0  # maximum random scale
   rotate_min: -10  # minimum random rotate
@@ -24,7 +24,7 @@ TRAIN:
   batch_size: 2  # batch size for training
   batch_size_val: 1  # batch size for validation during training, memory and speed tradeoff
   base_lr: 0.001
-  epochs: 100
+  epochs: 20
   start_epoch: 0
   power: 0.9
   momentum: 0.9
@@ -51,17 +51,17 @@ TEST:
   test_list: dataset/michael/list/test_img_list.txt
   split: val  # split in [train, val and test]
   mode: vis  # [test, vis], test=for numeric result, vis=for visual resutls
-  predict_color: True
+  predict_color: True # predict color mask or not
   base_size: 2048  # based size for scaling
-  test_h: 713
-  test_w: 713
+  test_h: 257
+  test_w: 257
   scales: [1.0]  # evaluation scales, ms as [0.5, 0.75, 1.0, 1.25, 1.5, 1.75]
   has_prediction: False  # has prediction already or not
   index_start: 0  # evaluation start index in list
   index_step: 0  # evaluation step index in list, 0 means to end
   test_gpu: [0]
   model_path: # evaluation model path
-  save_folder: # results save folder
+  save_folder: result/test# results save folder
   imshow_batch: True # [True, False], True=for visual result, False=for numeric result
   device: cuda
   ignore_unlabeled: True
