--- a/Segmentation-Experiments/config/rescuenet-pspnet101.yaml
+++ b/Segmentation-Experiments/config/rescuenet-pspnet101.yaml
@@ -10,8 +10,8 @@ TRAIN:
   use_pretrained_weights: True # to indicate whether the model will use pre-trained weights or not
   dataset: rescuenet # @sh : new param
   sync_bn: True  # adopt syncbn or not
-  train_h: 257 #1024
-  train_w: 257 #1024 #713
+  train_h: 513 #1024
+  train_w: 513 #1024 #713
   scale_min: 0.5  # minimum random scale
   scale_max: 2.0  # maximum random scale
   rotate_min: -10  # minimum random rotate
@@ -60,7 +60,7 @@ TEST:
   index_start: 0  # evaluation start index in list
   index_step: 0  # evaluation step index in list, 0 means to end
   test_gpu: [0]
-  model_path: # evaluation model path
+  model_path: exp/RescueNet/pspnet101/model/train_epoch_20.pth # evaluation model path
   save_folder: result/test# results save folder
   imshow_batch: True # [True, False], True=for visual result, False=for numeric result
   device: cuda
